--- a/style.css
+++ b/style.css
@@ -6,10 +6,26 @@
 }
 
 html {
-  font-size: 100%;
+  font-size: 62.5%;
   box-sizing: border-box;
 }
 
 body {
   box-sizing: inherit;
+  font-size: 1.6rem;
+  background-color: #ecf5ff;
+  color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+}
+h1,
+h2,
+h3,
+h4 {
+  margin-bottom: 1rem;
+}
+
+h1 {
+  font-size: 5.4rem;
+  color: #56a5eb;
+  margin-bottom: 5rem;
 }
