--- a/style.css
+++ b/style.css
@@ -29,3 +29,20 @@ h1 {
   color: #56a5eb;
   margin-bottom: 5rem;
 }
+
+/* direct child selector */
+h1 > span {
+  font-size: 2.4rem;
+  font-weight: 500;
+}
+
+h2 {
+  font-size: 4.2rem;
+  margin-bottom: 4rem;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 2.8rem;
+  font-weight: 500;
+}
