--- a/style.css
+++ b/style.css
@@ -50,3 +50,13 @@ h3 {
 a {
   text-decoration: none;
 }
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-column {
+  flex-direction: column;
+}
