--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a {
   display: none;
 }
 
+/** button **/
 .btn {
   width: 20rem;
   padding: 1rem 0;
@@ -96,4 +97,11 @@ a {
   font-size: 1.8rem;
   text-align: center;
   text-decoration: none;
+  transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+  cursor: pointer;
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+  transform: translateY(-0.1rem);
 }
