--- a/style.css
+++ b/style.css
@@ -117,3 +117,13 @@ a {
   box-shadow: none;
   transform: none;
 }
+
+/* game page */
+.choice-container {
+  display: flex;
+  margin-bottom: 0.5rem;
+  width: 100%;
+  font-size: 1.8rem;
+  border: 0.1rem solid rgba(86, 165, 235, 0.25);
+  background-color: white;
+}
