--- a/style.css
+++ b/style.css
@@ -127,3 +127,9 @@ a {
   border: 0.1rem solid rgba(86, 165, 235, 0.25);
   background-color: white;
 }
+
+.choice-prefix {
+  padding: 1.5rem 2.5rem;
+  background-color: #56a5eb;
+  color: white;
+}
