--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a {
 
 .container {
   height: 100vh;
-  min-width: 80rem;
+  max-width: 80rem;
   margin: 0 auto;
   display: flex;
   justify-content: center;
