--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ a {
   height: 100vh;
   max-width: 80rem;
   margin: 0 auto;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
