--- a/style.css
+++ b/style.css
@@ -197,3 +197,15 @@ input {
   font-size: 1.8rem;
   border: 0.1rem solid #16232f;
 }
+
+.no-score-msg {
+  font-size: 2rem;
+  margin-bottom: 3.5rem;
+}
+
+.score-li {
+  list-style: none;
+  font-size: 2.5rem;
+  text-align: center;
+  margin-bottom: 2.5rem;
+}
