--- a/style.css
+++ b/style.css
@@ -131,6 +131,25 @@ a {
   animation: spin 2s linear infinite;
 }
 
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* game page */
 .hud {
   display: flex;
