--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ a {
 
 /* loader */
 .loader {
-  border: 1rem solid #f3f3f3;
+  border: 1rem solid white;
   border-radius: 50%;
   border-top: 1rem solid #3498db;
   width: 6rem;
